// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickTimeTable is working properly for Hour 1`] = `
<div
  class="timepicker-hours"
>
  <table
    class="table-condensed"
  >
    <tbody>
      <tr>
        <td
          class="hour"
        >
          12
        </td>
        <td
          class="hour"
        >
          01
        </td>
        <td
          class="hour"
        >
          02
        </td>
        <td
          class="hour"
        >
          03
        </td>
      </tr>
      <tr>
        <td
          class="hour"
        >
          04
        </td>
        <td
          class="hour"
        >
          05
        </td>
        <td
          class="hour"
        >
          06
        </td>
        <td
          class="hour"
        >
          07
        </td>
      </tr>
      <tr>
        <td
          class="hour"
        >
          08
        </td>
        <td
          class="hour"
        >
          09
        </td>
        <td
          class="hour"
        >
          10
        </td>
        <td
          class="hour"
        >
          11
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PickTimeTable is working properly for Minute 1`] = `
<div
  class="timepicker-minutes"
>
  <table
    class="table-condensed"
  >
    <tbody>
      <tr>
        <td
          class="minute"
        >
          00
        </td>
        <td
          class="minute"
        >
          05
        </td>
        <td
          class="minute"
        >
          10
        </td>
        <td
          class="minute"
        >
          15
        </td>
      </tr>
      <tr>
        <td
          class="minute"
        >
          20
        </td>
        <td
          class="minute"
        >
          25
        </td>
        <td
          class="minute"
        >
          30
        </td>
        <td
          class="minute"
        >
          35
        </td>
      </tr>
      <tr>
        <td
          class="minute"
        >
          40
        </td>
        <td
          class="minute"
        >
          45
        </td>
        <td
          class="minute"
        >
          50
        </td>
        <td
          class="minute"
        >
          55
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
